# ChangeLog for media-sound/juk
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/juk/ChangeLog,v 1.1 2003/02/22 20:24:40 danarmak Exp $

*juk-1.0_p1 (22 Feb 2003)

  22 Feb 2003;  <root@gentoo.org> juk-1.0_p1.ebuild files/digest-juk-1.0_p1 :
  JuK is a kde-based media player/manager/jukebox. User submission #15991 by
  Francisco Gimeno.
